@@ -7,14 +7,8 @@
  * REVISIONS:
  *   CSH 01/08-2000 Created
  */
-#include <roscfg.h>
-#include <tcpip.h>
-#include <datagram.h>
-#include <routines.h>
-#include <transmit.h>
-#include <address.h>
-#include <route.h>
-#include <pool.h>
+
+#include "precomp.h"
 
 
 /* Pending request queue */
